# api-mevzuatgpt

./: .gitignore  Cargo.toml  README.md  UBUNTU_VPS_KURULUM.md  check-api.sh  deploy.sh  endpoints.md  mongodb_indexes.js
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: announcement.rs  autocomplete.rs  document.rs  documents_yargitay.rs  health.rs  kurum.rs  kurum_duyuru.rs  link.rs  mod.rs  regulation.rs  regulation_yargitay.rs  search.rs  search_yargitay.rs  sitemap.rs  statistics.rs
src/models/: announcement.rs  autocomplete.rs  document.rs  document_filters.rs  kurum.rs  kurum_duyuru_scraped.rs  link.rs  mod.rs  regulation.rs  search.rs  sitemap.rs  statistics.rs
src/routes/: mod.rs
src/utils/: mod.rs
