[package]
name = "api-mevzuatgpt"
version = "0.1.0"
edition = "2021"
default-run = "api-mevzuatgpt"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
log = "0.4"
futures = "0.3"
bson = "2.9"
chrono = "0.4"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1.10"
url = "2.5"

